# WrplReplayParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ClogDecryptor/: CMakeLists.txt
ClogDecryptor/ClogDecryptor/: CMakeLists.txt  ClogDecryptor.cpp
ClogDecryptor/DecryptFile/: CMakeLists.txt  DecryptFile.cpp
ClogDecryptor/include/: ClogDecryptor.h
cmake/: CompilerWarnings.cmake  functions.cmake
cmake/patches/: patch_libdwarf.cmake
codegen/: hashCheck.py  runCodegen.py
codegen/ecs/: clang_ecs_parser.py  gen_es.py  gen_es30.py  include_dirs
codegen/reflection/: DataTypes.py  builtin_types.py  cpp_types.py  custom_rw.py  parser.py
codegen/reflection/objects/: ReflectableObjects.py  obj_base.py
config_dir/: dagor_replay_test.blk  logger_config.blk
debugging/: CMakeLists.txt
debugging/Cmain/: CMakeLists.txt
debugging/DebugMission/: CMakeLists.txt  main.cpp
debugging/DumpMission/: CMakeLists.txt  CustomSettings.blk  CustomSpawnScore.blk  CustomVars.blk  customTriggers.blk  main.cpp
debugging/TestNewBlk/: CMakeLists.txt  main.cpp
debugging/VromfsTest/: CMakeLists.txt  main.cpp
debugging/dump_tags/: CMakeLists.txt  main.cpp
debugging/testLoadTextBlk/: CMakeLists.txt  main.cpp  test.blk
experiment/: CMakeLists.txt
experiment/create_entitiy/: CMakeLists.txt  code.cpp
experiment/dagor_replay_test/: CMakeLists.txt  Replay.cpp  TestLoadingReplay.cpp
experiment/dagor_replay_threading_test/: CMakeLists.txt  TestLoadingReplay.cpp
experiment/python/: CMakeLists.txt  main.cpp
experiment/replay_profile/: CMakeLists.txt  ProfileReplay.cpp
experiment/test_gstate_size/: CMakeLists.txt  test_gstate_size.cpp
experiment/test_init/: CMakeLists.txt  test_init.cpp
experiment/test_multiple_replays/: CMakeLists.txt  Replay.cpp  test_multiple_replays.cpp
experiment/test_net_unpack/: CMakeLists.txt  testNet.cpp
python/: CMakeLists.txt  ecs.cpp  main.cpp
python/BitStream/: BitStream.cpp  CMakeLists.txt
python/DataBlock/: CMakeLists.txt  DataBlock.cpp
python/ecs/: CMakeLists.txt  ECSArrayTypes.cpp  ECSQueryES.cpp  ECSTypes.cpp  Entity.cpp  EntityId.cpp  EntityManager.cpp  GState.cpp
python/include/: Module.h
python/include/modules/: BitStream.h  Math.h  State.h  bind_readonly_vector.h  codegenObjects.h
python/include/modules/DataBlock/: DataBlock.h
python/include/modules/ecs/: ECSTypes.h  Entity.h  EntityId.h  EntityManager.h  GState.h
python/include/modules/mpi/: battle_messages.h  bind_array.h  codegen_objects.h  codegen_types.h  mpi.h  types.h  unit.h
python/include/modules/replay/: replay.h
python/main/: CMakeLists.txt
python/math/: CMakeLists.txt  Math.cpp
python/mpi/: CMakeLists.txt  battle_messages.cpp  codegen_objects.cpp  codegen_types.cpp  codegen_types_0.cpp  codegen_types_1.cpp  codegen_types_2.cpp  codegen_types_3.cpp  codegen_types_4.cpp  codegen_types_5.cpp  codegen_types_6.cpp  mpi.cpp  types.cpp  unit.cpp
python/replay/: CMakeLists.txt  replay.cpp
python/state/: CMakeLists.txt  State.cpp
replay/: CMakeLists.txt
replay/Replay/: CMakeLists.txt  Replay.cpp  ReplayReader.cpp
replay/codegen/: CMakeLists.txt  DataTypes.py  builtin_types.py  cpp_types.py  custom_rw.py  parser.py  write_header.py
replay/codegen/objects/: ReflectableObjects.py  obj_base.py
replay/ecs/: Archetypes.cpp  BaseEntity.cpp.inl  BaseEntity.cpp.inl.gen.cpp  BitStreamDeserializer.cpp  CMakeLists.txt  Component.cpp  ComponentTypes.cpp  ComponentTypesDefs.cpp  DataComponents.cpp  DataComponentsDefs.cpp  EntityManager.cpp  EntityManagerQuery.cpp  EventsDB.cpp  LoadTemplatesBLK.cpp  Templates.cpp  Unit.cpp  baseio.cpp  ecsPull.cpp
replay/events/: BaseEntityES.cpp.inl  BaseEntityES.gen.es.cpp  CMakeLists.txt  RocketryES.cpp.inl  RocketryES.gen.es.cpp  UpdateMPlayerES.cpp.inl  UpdateMPlayerES.gen.es.cpp  ecsPull.cpp
replay/idFieldSerializer/: CMakeLists.txt  idFieldSerializer.cpp
replay/include/: BitVector.h  RewindMgr.h  StringTableAllocator.h  Unit.h  basic_replay_structs.h  consts.h  hash.h  idFieldSerializer.h  onDemandInit.h  tokenize_const_string.h
replay/include/Replay/: Replay.h  ReplayParser.h  ReplayReader.h  ReplayStructs.h  find_rpl_files.h
replay/include/ecs/: BasicTypeDefs.h  BitStreamDeserializer.h  ComponentPrinting.h  ComponentPrintingImplementations.h  ComponentRef.h  ComponentTypeManager.h  ComponentTypes.h  ComponentTypesDefs.h  DataComponents.h  DataComponentsDefs.h  EntityDescs.h  EntityManager.h  LoadTemplatesBlk.h  Templates.h  archetypes.h  baseIo.h  component.h  componentsMap.h  ecsCodegen.h  ecsHash.h  entityId.h  rewind.h  typesAndLimits.h
replay/include/gameMath/: quantization.h
replay/include/init/: initialize.h
replay/include/mpi/: BattleMessages.h  GeneralObject.h  MPlayer.h  Messages.h  (+8 more)
replay/init/: CMakeLists.txt  init.cpp
replay/mpi/: BattleMessages.cpp  CMakeLists.txt  MPLayer.cpp  ObjectDispatcher.cpp  PositionSync.cpp  Replication.cpp  mpi.cpp  netUtils.cpp  reflection.cpp  serializers.cpp
replay/mpi/codegen/: serializers.cpp
replay/network/: CMakeLists.txt  CNetwork.cpp  Connection.cpp  Message.cpp  Object.cpp  eid.cpp
replay/state/: CMakeLists.txt  ParserState.cpp
replay_inspector/: CMakeLists.txt
replay_inspector/include/: stb_image.h
replay_inspector/inspectorECS/: CMakeLists.txt  query_draw_units.cpp.inl  query_draw_units.gen.es.cpp
replay_inspector/repl2/: CMakeLists.txt  viewer.cpp
replay_inspector/view_templates/: CMakeLists.txt  viewer.cpp
src/: CMakeLists.txt
src/BitStream/: BitStream.cpp  CMakeLists.txt
src/DataBlock/: BLK_serialize.cpp  BLK_text.cpp  CMakeLists.txt  DataBlock.cpp  DataBlockShared.cpp
src/FileSystem/: CMakeLists.txt  Directory.cpp  FSObject.cpp  File.cpp  FileManager.cpp
src/Logger/: CMakeLists.txt  logger.cpp
src/VROMFs/: CMakeLists.txt  VROMFs.cpp
src/include/: BitStream.h  DataBlock.h  FileSystem.h  Logger.h  StringTableAllocator.h  ThreadPool.h  VROMFs.h  dag_assert.h  halfFloatSimple.h  onDemandInit.h  reader.h  utils.h  writer.h
src/math/: CMakeLists.txt  mathAng.cpp
src/reader/: CMakeLists.txt  Readers.cpp  ZlibRead.cpp
(+60 files in other folders)
