add_executable(dagor_rpl_threading_test
        TestLoadingReplay.cpp
)
target_link_libraries(dagor_rpl_threading_test
        LOGGER::LOGGER
        fmt::fmt
        BS::BS
        BLK::BLK
        READER::READER
        FS::FS
        VROMFS::VROMFS
        FieldSerializer:FieldSerializer
        NET::NET
        dagECS::dagECS
        INIT::INIT
        Replay::Replay
        Zlib::Zlib
        # mimalloc

)

target_include_directories(dagor_rpl_threading_test
        PUBLIC
        "${BASE_DIR}/replay/include"
        "${BASE_DIR}/src/include"
        # "${BASE_DIR}/3rdParty"
)

attach_signal_tracer(dagor_rpl_threading_test)

# SetGenFlags(dagor_rpl_test)