add_executable(test_ecs_init
        test_init.cpp
)
target_link_libraries(test_ecs_init
        LOGGER::LOGGER
        fmt::fmt
        BS::BS
        BLK::BLK
        READER::READER
        FS::FS
        VROMFS::VROMFS
        FieldSerializer:FieldSerializer
        NET::NET
        dagECS::dagECS
        INIT::INIT
        Replay::Replay

)

target_include_directories(test_ecs_init
        PUBLIC
        "${BASE_DIR}/replay/include"
        "${BASE_DIR}/src/include"
        # "${BASE_DIR}/3rdParty"
)

# SetGenFlags(dagor_rpl_test)